--- a/styles.css
+++ b/styles.css
@@ -228,12 +228,18 @@ body {
   .logo-text {
     font-size: 20px;
   }
+   .logo {
+    margin-left: 8px;
+}
 
   .logo-dot {
     font-size: 0.8em;
   }
 
   /* Hamburger button */
+   .nav-toggle {
+    margin-top: -4px; /* lo alza un pochino */
+}
   .nav-toggle {
     display: flex;
     width: 40px;
